--- a/aspnet-core/src/Store.Public.Web/Pages/Products/Manufacturer.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Products/Manufacturer.cshtml
@@ -40,7 +40,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="d-inline-block"><a class="view-type-grid mr-5 active" href="shop-grid.html"></a></div>
+                            <div class="d-inline-block"><a class="view-type-grid mr-5 active" href="#"></a></div>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <ul class="list-nav-arrow">
                             @foreach (var item in Model.Categories)
                             {
-                                  <li><a href="/products/@(item.Code).html">@item.Name<span class="number">@item.productCount</span></a></li>
+                                 <li><a href="/products/@(item.Code).html">@item.Name<span class="number">@item.productCount</span></a></li>
                             }
                         </ul>                      
                     </div>
