--- a/aspnet-core/src/Store.Public.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -80,14 +80,12 @@
                     <div class="mt-30"><a class="icon-socials icon-facebook" href="#"></a><a class="icon-socials icon-instagram" href="#"></a><a class="icon-socials icon-twitter" href="#"></a><a class="icon-socials icon-linkedin" href="#"></a></div>
                 </div>
                 <div class="col-lg-3 width-20 mb-30">
-                    <h4 class="mb-30 color-gray-1000">Make Money with Us</h4>
+                    <h4 class="mb-30 color-gray-1000">Hợp tác</h4>
                     <ul class="menu-footer">
-                        <li><a href="page-about-us.html">Mission &amp; Vision</a></li>
-                        <li><a href="page-about-us.html">Our Team</a></li>
-                        <li><a href="page-careers.html">Careers</a></li>
-                        <li><a href="#">Press &amp; Media</a></li>
-                        <li><a href="#">Advertising</a></li>
-                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Tầm nhìn</a></li>
+                        <li><a href="#">Về chúng tôi</a></li>
+                        <li><a href="#">Hình ảnh</a></li>
+                        <li><a href="#">Quảng cáo</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 width-16 mb-30">
