--- a/aspnet-core/src/Store.Public.Web/Pages/Cart/Checkout.cshtml
+++ b/aspnet-core/src/Store.Public.Web/Pages/Cart/Checkout.cshtml
@@ -9,9 +9,8 @@
     <div class="breadcrumbs-div">
         <div class="container">
             <ul class="breadcrumb">
-                <li><a class="font-xs color-gray-1000" href="/">Home</a></li>
-                <li><a class="font-xs color-gray-500" href="#">Shop</a></li>
-                <li><a class="font-xs color-gray-500" href="#">Checkout</a></li>
+                <li><a class="font-xs color-gray-1000" href="/">Trang chủ</a></li>
+                <li><a class="font-xs color-gray-500" href="#">Thanh toán</a></li>
             </ul>
         </div>
     </div>
@@ -24,13 +23,13 @@
                 @if (Model.CreateStatus == true)
                 {
                             <div class="alert alert-success" role="alert">
-                                Create order successful.
+                                Gửi đơn hàng thành công, nhân viên sẽ liên hệ bạn xác nhận đơn hàng sớm nhất.
                             </div>
                 }
                 else
                 {
                             <div class="alert alert-danger" role="alert">
-                                Create order failed, please try again!
+                                Tạo đơn hàng thất bại! Vui lòng liên hệ admin để được hỗ trợ.
                             </div>
                 }
                 </div>
@@ -40,36 +39,37 @@
                 <div class="row">
                     <div class="col-lg-6">
 
-                        <form method="post">
-                            <div class="box-border">
-                                
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <h5 class="font-md-bold color-brand-3 mt-15 mb-20">Địa chỉ giao hàng</h5>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="form-group">
-                                            <input class="form-control font-sm" type="text" asp-for="Order.CustomerName" placeholder="Họ và tên*">
+                            <form method="post">
+                                <div class="box-border">
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <h5 class="font-md-bold color-brand-3 mt-15 mb-20">Địa chỉ giao hàng</h5>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="form-group">
+                                                <input class="form-control font-sm" type="text" asp-for="Order.CustomerName" placeholder="Họ và tên*">
+                                                <span asp-validation-for="Order.CustomerName" class="text-danger"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="form-group">
+                                                <input class="form-control font-sm" type="text" asp-for="Order.CustomerAddress" placeholder="Địa chỉ*">
+                                                <span asp-validation-for="Order.CustomerAddress" class="text-danger"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-12">
+                                            <div class="form-group">
+                                                <input class="form-control font-sm" type="text" asp-for="Order.CustomerPhoneNumber" placeholder="Số điện thoại*">
+                                                <span asp-validation-for="Order.CustomerPhoneNumber" class="text-danger"></span>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <input class="form-control font-sm" type="text" asp-for="Order.CustomerAddress" placeholder="Địa chỉ*">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-group">
-                                            <input class="form-control font-sm" type="text" asp-for="Order.CustomerPhoneNumber" placeholder="Số điện thoại*">
-                                        </div>
-                                    </div>
-
                                 </div>
-                            </div>
-                            <div class="row mt-20">
-                                <div class="col-lg-6 col-5 mb-20"><a class="btn font-sm-bold color-brand-1 arrow-back-1" href="/shop-cart.html">Trở về giỏ hàng</a></div>
-                                <div class="col-lg-6 col-7 mb-20 text-end"><button class="btn btn-buy w-auto arrow-next" type="submit">Đặt hàng</button></div>
-                            </div>
-                        </form>
+                                <div class="row mt-20">
+                                    <div class="col-lg-6 col-5 mb-20"><a class="btn font-sm-bold color-brand-1 arrow-back-1" href="/shop-cart.html">Trở về giỏ hàng</a></div>
+                                    <div class="col-lg-6 col-7 mb-20 text-end"><button class="btn btn-buy w-auto arrow-next" type="submit">Đặt hàng</button></div>
+                                </div>
+                            </form>
                     </div>
                     <div class="col-lg-6">
                         <div class="box-border">
@@ -134,3 +134,6 @@
         }
     </div>
 </section>
+@section Scripts {
+   <partial name="_ValidationScriptsPartial" />
+}
